fix: set html overflow auto

--- a/src/components/structures/Page/page.module.css
+++ b/src/components/structures/Page/page.module.css
@@ -3,6 +3,7 @@
   --z-index-stack-2: 101;
 
   min-height: 100vh;
+  position: relative;
 }
 
 .main {
