--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -212,6 +212,7 @@ html,body {
 
 html {
   background-color: var(--ye-color-background);
+  overflow: auto;
 }
 
 body {
